# Changelog – Aspen Board

Alle relevanten Änderungen an diesem Modul werden hier dokumentiert.
Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und [SemVer](https://semver.org/lang/de/).

## [1.4.7] – 2026-01-30
### Changed
- Der Listenname wird ausschließlich im Tab angezeigt und lässt sich per Doppelklick im Tab umbenennen.

## [1.4.6] – 2026-01-30
### Changed
- ToDo-Listen werden im Optionsmenü als Tabs unter der Überschrift dargestellt, sodass jeweils eine Liste im Fokus steht.
### Fixed
- Beim Entfernen einer ToDo-Liste erscheint nun eine Bestätigungsabfrage und die Liste wird zuverlässig gelöscht.

## [1.4.5] – 2026-01-30
### Changed
- ToDo-Tab breiter auf Listenlayout ausgerichtet; ToDo-Zuweisung ist kompakter.
- ToDo-Aktivierung erfolgt jetzt automatisch über die Listen-Zuweisung (kein separater Toggle).

## [1.4.4] – 2026-01-30
### Added
- Ja/Nein-Schritte können nun eigene Folgepfade (Ja/Nein) enthalten, sodass ToDos verzweigen.
### Changed
- ToDo-Popup visualisiert den aktiven Pfad und verzweigt je nach Auswahl.

## [1.4.3] – 2026-01-30
### Added
- ToDo-Schritte unterstützen nun Info- und Ja/Nein-Abfragen inklusive Auswahl im Listen-Editor.
### Changed
- ToDo-Popup lässt sich per Enter oder Leertaste durch die Schritte navigieren und setzt Ja standardmäßig voraus.

## [1.4.2] – 2026-01-30
### Changed
- ToDo-Listen heben den Listentitel gegenüber den eingerückten Schritten optisch deutlicher ab.

## [1.4.1] – 2026-01-30
### Fixed
- Fokus in ToDo-Schritten bleibt beim Tippen erhalten, ohne das Feld erneut anklicken zu müssen.

## [1.4.0] – 2026-01-30
### Added
- ToDo-Listen zentral im ToDo-Tab anlegen und über Dropdowns den Extraspalten zuweisen.
- ToDo-Zuweisungen zeigen den Status der hinterlegten Schritte pro Extraspalte.

## [1.3.0] – 2026-01-30
### Added
- Hauptspalten-Name im Extraspalten-Dialog ergänzt und als Überschrift über der Hauptliste angezeigt.